--- a/BSC1.html
+++ b/BSC1.html
@@ -120,7 +120,7 @@
         </div>
 
         <div class="bio">
-            Beginning my pottery journey in 2020 at the Logan Artists Association, I've developed a deep passion for ceramics while working from my home studio in Brisbane. My practice combines traditional throwing techniques with contemporary design, creating functional pieces that bring artistry to everyday life.
+            Founding Brisbane Ceramics, where I currently work and teach. I Began my pottery journey in 2020 at the Logan Artists Association, I've developed a deep passion for ceramics while working from my home studio in Brisbane. My practice combines traditional throwing techniques with contemporary design, creating functional pieces that bring artistry to everyday life.
         </div>
 
         <div class="links">
