--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         </div>
 
         <div class="bio">
-            As a wheel-thrown ceramics artist, I create my pieces between my home studio and Indooroopilly Ceramics Studio, where I also share my passion for pottery as a teacher. My practice focuses on the art of throwing on the wheel, crafting functional pieces that blend traditional techniques with contemporary design.
+            As a wheel-thrown ceramics artist, I founded Brisbane Ceramics, where I also share my passion for pottery as a teacher. My practice focuses on the art of throwing on the wheel, crafting functional pieces that blend traditional techniques with contemporary design.
             <p class="lesson-info">Private lessons are available upon request - please email or text using the contact information below.</p>
         </div>
 
