--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
         <div class="contact-section">
             <div class="links">
                 <a href="shop.html" class="button">Shop</a>
+                <a href="class-booking.html" class="button">Classes</a>
                 <a href="https://instagram.com/bodhiswan" target="_blank" rel="noopener" class="button">Instagram</a>
             </div>
 
